# py-np4vtt

./: .gitignore  README.md  changelog.txt  controller.py  main.py  pyproject.toml
data/: Norway09_data_v5.txt  env_synth_binormal.csv  env_synth_lognormal.csv  env_synth_normal.csv
examples/: ann.ipynb  kspady.ipynb  lconstant.ipynb  loclogit.ipynb  logistic.ipynb  logit.ipynb  rouwendal.ipynb  rv.ipynb
examples/env_synth_data/: fourmethods_binormal.ipynb  fourmethods_lognormal.ipynb  fourmethods_normal.ipynb  generate_dataset_binormal.ipynb  generate_dataset_lognormal.ipynb  generate_dataset_normal.ipynb
examples/norway_data/: ann.ipynb  lconstant.ipynb  loclogit.ipynb  logistic.ipynb  rouwendal.ipynb  rv.ipynb
gui/: import_variables.py  mainwindow.py  ui_mainwindow.py
gui/formclasses/: ui_descriptives.py  ui_import_variables.py
gui/qtdesigner/: ui_descriptives.ui  ui_import_variables.ui  ui_modelconfig_logit.ui  ui_modelconfig_rouwendal.ui
gui/ui/: ui_mainwindow.ui
model/: data_format.py
src/: controller.py  test_ann.py  test_loclogit.py  test_logit.py  test_optimize.py  test_rouwendal.py
src/examples/: ann.ipynb  loclogit.ipynb  logit.ipynb  rouwendal.ipynb
src/gui/: import_variables.py  mainwindow.py  modelconfig.py  progress.py
src/model/: data_format.py  data_import.py  data_statistics.py  model_ann.py  model_loclogit.py  model_logit.py  model_rouwendal.py  plots.py
src/py_np4vtt/: __init__.py  data_format.py  data_import.py  model_ann.py  model_ann_2.py  model_kspady.py  model_lconstant.py  model_loclogit.py  model_logistic.py  model_rv.py  (+4 more)
(+23 files in other folders)
