[tool.poetry]
name = "py-np4vtt"
version = "0.1.0"
description = ""
authors = ["João Paulo Pizani Flor <paulopizani@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.4"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
