[tool.poetry]
name = "py-np4vtt"
version = "1.0.5"
description = "Python library providing NonParametric models for Value of Travel Time analysis"
authors = ["José Ignacio Hernández <J.I.Hernandez@tudelft.nl>", "João Paulo Pizani Flor <paulopizani@posteo.net>"]

homepage = "https://gitlab.tudelft.nl/np4vtt/py-np4vtt"
repository = "https://gitlab.tudelft.nl/np4vtt/py-np4vtt"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
pandas = "^1.3.1"
scipy = "^1.7.1"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
numdifftools = "^0.9.40"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
